--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.29.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
