--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-head": "^3.4.0",
+    "react-hook-form": "^7.18.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.28.0",
     "react-router-dom": "^5.3.0",
