--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "babel-eslint": "^10.1.0",
     "eslint": "7.11.0",
     "eslint-config-airbnb": "^18.2.0",
