--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11",
     "apexcharts": "^3.29.0",
     "axios": "^0.24.0",
+    "babel-preset-react-app": "^10.0.1",
     "date-fns": "^2.25.0",
     "framer-motion": "^4",
     "react": "^17.0.2",
